fix: allow all origins in CORS config